--- a/index.html
+++ b/index.html
@@ -13,18 +13,10 @@
 		.model {
 			width: 100%;
 			height: 100vh;
-			background: linear-gradient(
-					to bottom,
-					rgba(255, 255, 255, 0.15) 0%,
-					rgba(0, 0, 0, 0.15) 100%
-				),
-				radial-gradient(
-						at top center,
-						rgba(255, 255, 255, 0.4) 0%,
-						rgba(0, 0, 0, 0.4) 120%
-					)
-					#989898;
-			background-blend-mode: multiply, multiply;
+			background: url('./cali.jpg');
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
 			outline: none;
 		}
 	</style>
