--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 		}
 		body {
 			overflow: hidden;
+			height: 92vh;
 		}
 		.model {
-			width: 100%;
-			height: 100vh;
+			width: 100vw;
+			height: 100%;
 			background: url('./cali.jpg');
 			background-size: cover;
 			background-position: center;
